# unicode-collation

./: .hlint.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  TODO.md  cabal.project  stack.yaml  unicode-collation.cabal
.github/workflows/: ci.yml
app/: Main.hs
benchmark/: Main.hs
data/cjk/: Big5.txt  GB2312.txt  JISX0208.txt  Pinyin.txt  Stroke.txt  Zhuyin.txt
data/tailorings/: af.txt  ar.txt  as.txt  az.txt  be.txt  bn.txt  ca.txt  cs.txt  cu.txt  cy.txt  da.txt  de_at_ph.txt  de_phone.txt  dsb.txt  ee.txt  eo.txt  es.txt  es_trad.txt  et.txt  fa.txt  fi.txt  fi_phone.txt  fil.txt  fo.txt  gu.txt  ha.txt  haw.txt  he.txt  hi.txt  hr.txt  hu.txt  hy.txt  ig.txt  is.txt  ja.txt  kk.txt  kl.txt  kn.txt  ko.txt  kok.txt  (+43 more)
src/: UnicodeCollation.hs
src/Text/: Collate.hs
src/Text/Collate/: CanonicalCombiningClass.hs  Collation.hs  Collator.hs  CombiningClass.hs  Lang.hs  Normalize.hs  TH.hs  Tailorings.hs  Trie.hs  Types.hs  UnicodeData.hs
src/UnicodeCollation/: Collation.hs  Collator.hs  CombiningClass.hs  Elements.hs  Lang.hs  Mods.hs  TH.hs  Tailorings.hs  Trie.hs  Types.hs
test/: doctests.hs  unit.hs
test/uca-collation-test/: CollationTest_NON_IGNORABLE_SHORT.txt  CollationTest_SHIFTED_SHORT.txt
